[package]
name = "calicod"
description = "Calico full node daemon"
keywords = ["calico", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "calicod_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
calico-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

calico-addresses.workspace = true
calico-addressmanager.workspace = true
calico-consensus-core.workspace = true
calico-consensus-notify.workspace = true
calico-consensus.workspace = true
calico-consensusmanager.workspace = true
calico-core.workspace = true
calico-database.workspace = true
calico-grpc-server.workspace = true
calico-hashes.workspace = true
calico-index-processor.workspace = true
calico-mining.workspace = true
calico-notify.workspace = true
calico-p2p-flows.workspace = true
calico-perf-monitor.workspace = true
calico-rpc-core.workspace = true
calico-rpc-service.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true
calico-utils-tower.workspace = true
calico-utxoindex.workspace = true
calico-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "calico-alloc/heap"]
devnet-prealloc = ["calico-consensus/devnet-prealloc"]
semaphore-trace = ["calico-utils/semaphore-trace"]
