[package]
name = "calico-consensus"
description = "Calico consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
calico-consensus-core.workspace = true
calico-consensus-notify.workspace = true
calico-consensusmanager.workspace = true
calico-core.workspace = true
calico-database.workspace = true
calico-hashes.workspace = true
calico-math.workspace = true
calico-merkle.workspace = true
calico-muhash.workspace = true
calico-notify.workspace = true
calico-pow.workspace = true
calico-txscript.workspace = true
calico-txscript-errors.workspace = true
calico-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
calico-txscript-errors.workspace = true
calico-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["calico-consensus-core/devnet-prealloc"]
