[package]
name = "calico-mining"
description = "Calico mining"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-addresses.workspace = true
calico-consensus-core.workspace = true
calico-consensusmanager.workspace = true
calico-core.workspace = true
calico-hashes.workspace = true
calico-mining-errors.workspace = true
calico-muhash.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true

futures-util.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
sweep-bptree = "0.4.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
calico-txscript.workspace = true
criterion.workspace = true
secp256k1.workspace = true

[[bench]]
name = "bench"
harness = false
