[package]
name = "simpa"
description = "Calico Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
calico-consensus-core.workspace = true
calico-consensus-notify.workspace = true
calico-consensus.workspace = true
calico-core.workspace = true
calico-database.workspace = true
calico-hashes.workspace = true
calico-perf-monitor.workspace = true
calico-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "calico-alloc/heap"]
semaphore-trace = ["calico-utils/semaphore-trace"]
