[package]
name = "calico-wasm"
description = "CALICO WASM bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
js-sys.workspace = true
calico-addresses.workspace = true
calico-bip32.workspace = true
calico-consensus-core.workspace = true
calico-consensus-wasm.workspace = true
calico-core.workspace = true
calico-math.workspace = true
calico-pow.workspace = true
calico-txscript.workspace = true
calico-rpc-core.workspace = true
calico-utils.workspace = true
calico-wasm-core.workspace = true
calico-wallet-core.workspace = true
calico-wallet-keys.workspace = true
calico-wrpc-client.workspace = true
calico-wrpc-wasm.workspace = true
num.workspace = true
wasm-bindgen.workspace = true
workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[features] 
wasm32-sdk = [
    "calico-wallet-core/wasm32-sdk",
    "calico-pow/wasm32-sdk",
    "calico-txscript/wasm32-sdk",
]
wasm32-core = [
    "calico-wallet-core/wasm32-core",
    "calico-pow/wasm32-sdk",
    "calico-txscript/wasm32-sdk",
]
wasm32-rpc = [
    "calico-consensus-core/wasm32-sdk",
    "calico-consensus-wasm/wasm32-sdk",
    "calico-wrpc-client/wasm32-sdk",
    "calico-wrpc-wasm/wasm32-sdk",
]
wasm32-keygen = []
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]

[package.metadata.emanate.wasm]
targets = [
    { target = "nodejs", out-dir = "nodejs/calico" },
    { target = "web", out-dir = "web/calico" }
]
folder = "setup"
