[package]
name = "calico-connectionmanager"
description = "Calico connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
calico-addressmanager.workspace = true
calico-core.workspace = true
calico-p2p-lib.workspace = true
calico-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
