[package]
name = "calico-consensus-notify"
description = "Calico consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
calico-consensus-core.workspace = true
calico-core.workspace = true
calico-hashes.workspace = true
calico-notify.workspace = true
calico-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
