[package]
name = "calico-index-processor"
description = "Calico index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-consensus-core.workspace = true
calico-consensus-notify.workspace = true
calico-consensusmanager.workspace = true
calico-core.workspace = true
calico-database.workspace = true
calico-hashes.workspace = true
calico-index-core.workspace = true
calico-notify.workspace = true
calico-utils.workspace = true
calico-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
calico-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}
