[package]
name = "calico-perf-monitor"
description = "Calico process performance monitoring tools"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
calico-core.workspace = true
log.workspace = true
portable-atomic.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
workflow-perf-monitor.workspace = true
