[package]
name = "calico-rpc-core"
description = "Calico RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "calico-consensus-client/wasm32-sdk",
    "calico-consensus-wasm/wasm32-sdk"
]

[dependencies]
calico-addresses.workspace = true
calico-consensus-core.workspace = true
calico-consensus-client.workspace = true
calico-consensus-notify.workspace = true
calico-consensus-wasm.workspace = true
calico-core.workspace = true
calico-hashes.workspace = true
calico-index-core.workspace = true
calico-math.workspace = true
calico-mining-errors.workspace = true
calico-notify.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true
calico-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
