[package]
name = "calico-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

calico-addresses.workspace = true
calico-bip32.workspace = true
calico-consensus-core.workspace = true
calico-consensus-notify.workspace = true
calico-consensus.workspace = true
calico-consensusmanager.workspace = true
calico-core.workspace = true
calico-database.workspace = true
calico-grpc-client.workspace = true
calico-grpc-core.workspace = true
calico-grpc-server.workspace = true
calico-hashes.workspace = true
calico-index-processor.workspace = true
calico-math.workspace = true
calico-merkle.workspace = true
calico-muhash.workspace = true
calico-notify.workspace = true
calico-pow.workspace = true
calico-rpc-core.workspace = true
calico-rpc-service.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true
calico-utxoindex.workspace = true
calico-wrpc-server.workspace = true
calicod.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
calico-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["calicod/devnet-prealloc"]
