[package]
name = "calico-wallet-keys"
description = "Calico wallet key primitives"
keywords = ["calico", "wallet"]
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hmac.workspace = true
js-sys.workspace = true
calico-addresses.workspace = true
calico-bip32.workspace = true
calico-consensus-core.workspace = true
calico-txscript-errors.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true
calico-wasm-core.workspace = true
rand.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true
zeroize.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
