[package]
name = "calico-wallet-psst"
keywords = ["calico", "wallet", "psst", "psbt", "bip-370"]
description = "Partially Signed Calico Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["calico-consensus-client/wasm32-sdk"]
wasm32-types = ["calico-consensus-client/wasm32-types"]

[dependencies]
calico-addresses.workspace = true
calico-bip32.workspace = true
calico-consensus-client.workspace = true
calico-consensus-core.workspace = true
calico-txscript-errors.workspace = true
calico-txscript.workspace = true
calico-utils.workspace = true

bincode.workspace = true
derive_builder.workspace = true
js-sys.workspace = true
futures.workspace = true
hex.workspace = true
secp256k1.workspace = true
serde_repr.workspace = true
serde-value.workspace = true
serde.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true
