[package]
name = "calico-grpc-core"
description = "Calico gRPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-consensus-core.workspace = true
calico-core.workspace = true
calico-notify.workspace = true
calico-rpc-core.workspace = true
calico-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
log.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["tls", "gzip"] }
triggered.workspace = true
workflow-core.workspace = true

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
