[package]
name = "calico-grpc-server"
description = "Calico gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
calico-consensus-core.workspace = true
calico-core.workspace = true
calico-grpc-core.workspace = true
calico-notify.workspace = true
calico-rpc-core.workspace = true
calico-rpc-macros.workspace = true
calico-rpc-service.workspace = true
calico-utils-tower.workspace = true
calico-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true
rustls.workspace = true

[dev-dependencies]
calico-grpc-client.workspace = true
