[package]
name = "calico-wrpc-server"
description = "Calico wRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait.workspace = true
borsh = { workspace = true, features = ["rc"] }
futures.workspace = true
calico-consensus-core.workspace = true
calico-core.workspace = true
calico-grpc-client.workspace = true
calico-notify.workspace = true
calico-rpc-core.workspace = true
calico-rpc-macros.workspace = true
calico-rpc-service.workspace = true
calico-utils.workspace = true
log.workspace = true
num_cpus.workspace = true
paste.workspace = true
serde = { workspace = true, features = ["rc"] }
thiserror.workspace = true
tokio.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true
rustls.workspace = true
